# retrievalAPI

.github/workflows/: develop_gilweb.yml
backend/: pyproject.toml  test.ipynb
backend/decks/: database.db  poetry.toml  pyproject.toml
backend/decks/app/: __init__.py  db.py
backend/decks/app/models/: card.py  deck.py  models.py
backend/decks/app/resources/: card_manager.py  deck_manager.py
backend/decks/app/routers/: cards.py  decks.py
backend/decks/app/schemas/: cards.py  decks.py
backend/evaluator/: pyproject.toml
backend/evaluator/app/: __init__.py  db.py  test_entrypoints.py
backend/evaluator/app/dependencies/: evaluation.py
backend/evaluator/app/ml_core/: embeddings.py  utils.py
backend/evaluator/app/ml_core/evaluation/: factories.py  similarity.py
backend/evaluator/app/routers/: similarity.py
backend/evaluator/app/schemas/: similarity_input.py
backend/src/: __init__.py
backend/src/api/card/: manager.py  routes.py  schemas.py
backend/src/api/db/: db.py
backend/src/api/deck/: manager.py  routes.py  schemas.py
backend/src/api/session/: manager.py  routes.py  schema.py
backend/tracker/: db.sqlite  pyproject.toml
backend/tracker/app/: __init__.py  db.py
backend/tracker/app/models/: models.py
backend/user/: database.db  pyproject.toml
backend/user/app/: __init__.py  db.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  AppCardEditor.jsx  AppContextProvider.jsx  AppDeckEditor.jsx  AppHookContainer.jsx  AppRouter.jsx  main.jsx
frontend/src/hooks/: useAPI.jsx  useAPI__.jsx  useFetch.jsx
(+46 files in other folders)
