[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Manuel Gil <manuelgilsitio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlmodel = "^0.0.22"
pydantic = "^2.10.3"
requests = "^2.32.3"
tiktoken = "^0.8.0"
python-dotenv = "^1.0.1"
scikit-learn = "^1.6.0"

[tool.poetry.scripts]
embeddings="app.test_entrypoints:test_get_embeddings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
